# todoservice

./: .gitignore  AUTHORS  README  TODO  config.h.in  configure.ac
example/: Makefile.am
example/apache_vhost/: Makefile.am  todoservice_rootpath_vhost.conf  todoservice_subdir_vhost.conf
example/client/: Makefile.am  td
src/: Makefile.am  resttest.c  todoservice.c  utility.c  utility.h
test/: Makefile.am  uniqueslug.c  urldecode.c
